test/parse/module/bad-module-no-close.txt
;;; ERROR: 1
(module
(;; STDERR ;;;
out/test/parse/module/bad-module-no-close.txt:3:2: error: unexpected token EOF, expected ).
;;; STDERR ;;)
